--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="UTF-8" />
@@ -17,7 +17,7 @@
 <body>
   <!-- Header -->
   <header id="header" class="">
-    <div class="container py-5">
+    <div class="container ">
       <div class="d-flex justify-content-between align-items-center ">
         <div class="logo">
           <img src="images/logo.png" alt="" />
@@ -93,27 +93,80 @@
   </div>
 
 
+
+
   <!-- Intro -->
   <section class="intro text-center text-md-start" id="intro">
-    <div class="container">
-      <div class="row align-items-center g-5 ">
-        <div class="col-md-6 mb-5 mb-md-0">
-          <article class="content">
-            <h1>The Spirit of <br />Digital Agency.</h1>
-            <p>
-              Vestibulum ac diam sit amet quam vehicula elementum amet est on
-              dui. Nulla porttitor accumsan tincidunt.
-            </p>
-            <button class="theBtn">More About us</button>
-            <button class="touch">Get in Touch</button>
-          </article>
+
+    <div class="swiper introSwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="container">
+            <div class="row align-items-center g-5 ">
+              <div class="col-md-6 mb-5 mb-md-0">
+                <article class="content">
+                  <h2>The Spirit of <br />Digital Agency.</h2>
+                  <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum amet est on
+                    dui. Nulla porttitor accumsan tincidunt.
+                  </p>
+                  <button class="theBtn">More About us</button>
+                  <button class="touch">Get in Touch</button>
+                </article>
+              </div>
+              <div class="col-md-6">
+                <img src="images/intro.png" alt="intro" class="d-none d-md-block w-100 my-animate" />
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <img src="images/intro.png" alt="intro" class="d-none d-md-block w-100 my-animate" />
+        <div class="swiper-slide">
+          <div class="container">
+            <div class="row align-items-center g-5 ">
+              <div class="col-md-6 mb-5 mb-md-0">
+                <article class="content">
+                  <h2>The Spirit of <br />Digital Agency.</h2>
+                  <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum amet est on
+                    dui. Nulla porttitor accumsan tincidunt.
+                  </p>
+                  <button class="theBtn">More About us</button>
+                  <button class="touch">Get in Touch</button>
+                </article>
+              </div>
+              <div class="col-md-6">
+                <img src="images/intro.png" alt="intro" class="d-none d-md-block w-100 my-animate" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="container">
+            <div class="row align-items-center g-5 ">
+              <div class="col-md-6 mb-5 mb-md-0">
+                <article class="content">
+                  <h2>The Spirit of <br />Digital Agency.</h2>
+                  <p>
+                    Vestibulum ac diam sit amet quam vehicula elementum amet est on
+                    dui. Nulla porttitor accumsan tincidunt.
+                  </p>
+                  <button class="theBtn">More About us</button>
+                  <button class="touch">Get in Touch</button>
+                </article>
+              </div>
+              <div class="col-md-6">
+                <img src="images/intro.png" alt="intro" class="d-none d-md-block w-100 my-animate" />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="swiper-pagination"></div>
+
     </div>
   </section>
+
+
 
 
 
@@ -157,6 +210,8 @@
       </div>
     </div>
   </section>
+
+
 
 
 
@@ -220,6 +275,8 @@
       </div>
     </div>
   </section>
+
+
 
 
 
@@ -316,6 +373,8 @@
 
     </div>
   </section>
+
+
 
 
 
@@ -463,6 +522,8 @@
 
 
 
+
+
   <section class="contact" id="contact">
     <div class="container">
       <div class="title mb-5">
@@ -505,6 +566,8 @@
 
 
 
+
+
   <footer class="footer">
     <div class="container text-center">
       <span class="d-inline-block text-uppercase">doob</span>
@@ -525,7 +588,7 @@
     </div>
   </footer>
 
-  <!---->
+
 
 
 
